--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
 
 <body>
   <div id="root"></div>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+  </script>
+  <script type="text/javascript">
+    (function () {
+      emailjs.init("aA9YXj15SJU7mu_rf");
+    })();
+  </script>
   <script type="module" src="/main.jsx"></script>
 </body>
 
